app/page.module.scss
// Classes
.hookContainer {
  position: relative;
  width: 100%;
  height: 95vh;
  background: linear-gradient(to bottom right, #24eded, #1063ff);
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  z-index: 0;

  .shadowBox {
    background-color: black;
    width: 100%;
    height: 95vh;
    position: absolute;
    z-index: 6;
  }

  .cloud {
    position: absolute;
    z-index: 1;
  }

  .c1 {
    will-change: transform, opacity;
    width: 280px;
    left: 5vw;
    top: 50vh;
    animation: leftEntering 0.5s ease-out;
  }

  .c2 {
    will-change: transform, opacity;
    right: 5vw;
    top: 5vh;
    width: 250px;
    animation: rightEntering 0.5s ease-out;
  }

  .hill {
    will-change: transform, opacity;
    position: absolute;
    bottom: 0px;
    height: 600px;
    right: -50px;
    z-index: 1;
  }

  .children {
    will-change: transform, opacity;
    position: absolute;
    z-index: 2;
    height: 300px;
    bottom: 20px;
    right: 100px;
  }

  .sun {
    will-change: transform, opacity;
    position: absolute;
    z-index: 1;
    top: -50px;
    left: -50px;
    width: 300px;
    animation: topEntering 0.5s ease-out;
  }
}

.titleContainer {
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
  z-index: 5;

  h2,
  p {
    color: white;
    font-weight: 800;
    text-shadow: 2px 2px 0px #024c81;
  }

  .p1 {
    font-size: 3rem;
  }

  .p2 {
    font-size: 3.5rem;
  }

  .vdc {
    font-size: 2rem;
    font-weight: normal;
  }
}

.yearsContainer {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  z-index: 10;

  .topEdge {
    position: absolute;
    width: 100%;
    top: -20px;
    z-index: 10;
    filter: drop-shadow(10px 0px 15px rgba(0, 0, 0, 0.5));
    background: linear-gradient(to top, #f9e8b2 50%, rgba(white, 0) 0%);
  }

  .yearsSection {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    z-index: 11;
    gap: 10px;
    padding-top: 60px;
    padding-bottom: 60px;
    background-color: #f9e8b2;
    min-height: 400px;
  }

  .bottomEdge {
    position: absolute;
    width: 100%;
    bottom: -20px;
    z-index: 10;
    filter: drop-shadow(10px 0px 15px rgba(0, 0, 0, 0.5));
    background: linear-gradient(to bottom, #f9e8b2 50%, rgba(white, 0) 0%);
  }
}

.pageContent {
  display: flex;
  flex-direction: column;
  gap: 40px;
  position: relative;
  padding-left: 10%;
  padding-right: 10%;
  padding-bottom: 50px;
  top: -100px;
  color: #5c5c5c;

  .section {
    display: flex;
    width: 100%;
    flex-direction: column;
    gap: 20px
  }
}

// Animations
// @keyframes move1 {
//   0% {
//     transform: translateY(0);
//   }

//   50% {
//     transform: translateY(-3vh);
//   }

//   100% {
//     transform: translateY(0);
//   }
// }

@keyframes leftEntering {
  0% {
    transform: translateX(-5vw);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes rightEntering {
  0% {
    transform: translateX(+5vw);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes topEntering {
  0% {
    transform: translateY(-5vh);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

// @keyframes pulsing {
//   0% {
//     transform: scale(1);
//   }

//   25% {
//     transform: scale(1.1);
//   }

//   50% {
//     transform: scale(1);
//   }

//   75% {
//     transform: scale(1.1);
//   }

//   100% {
//     transform: scale(1);
//   }
// }

// Width media queries
@media (max-width: 1500px) {
  .hookContainer {
    .c1 {
      width: 250px;
    }

    .c2 {
      width: 200px;
    }

    .children {
      height: 250px;
    }

    .hill {
      height: 550px;
    }
  }
}


@media (max-width: 800px) {
  .hookContainer {
    height: 100vh;

    .c1 {
      width: 230px;
      left: 10px;
      top: 60vh;
    }

    .c2 {
      width: 180px;
    }

    .children {
      height: 230px;
    }

    .hill {
      height: 500px;
    }
  }

  .titleContainer {
    top: -30px
  }
}

// Last width media Query
@media (max-width: 650px) or (max-height: 500px) {
  .hookContainer {
    min-height: 500px;

    .c1 {
      display: none;
      width: 200px;
      left: -30px;
      top: 300px;
    }

    .c2 {
      top: 70px;
      width: 180px;
      right: -10px;
    }

    .children {
      right: 70px
    }

    .hill {
      height: 500px;
    }

    .sun {
      height: 220px;
      top: 20px;
      left: -100px;
      width: 300px;
    }

    .p1 {
      font-size: 2rem;
    }

    .p2 {
      font-size: 2.5rem;
    }
  }
}

